--- a/rvi/rvi_client.config
+++ b/rvi/rvi_client.config
@@ -13,45 +13,29 @@
 %% See ../CONFIGURE.md for a details on the configuration process
 %% itself.
 %% 
+
+%% Parameters for simpler modification
+Env = fun(V, Def) ->
+	      case os:getenv(V) of
+		  false -> Def;
+		  Str when is_integer(Def) -> list_to_integer(Str);
+		  Str when is_atom(Def) -> list_to_atom(Str);
+		  Str -> Str
+	      end
+      end.
+MyPort = Env("RVI_PORT", 8900).
+MyIP = Env("RVI_MYIP", "127.0.0.1").
+MyNodeAddr = Env("RVI_MY_NODE_ADDR", "127.0.0.1:8907").
+BackendIP = Env("RVI_BACKEND", "127.0.0.1").
+BackendPort = Env("RVI_BACKEND_PORT", 8807).
+IPPort = fun(IP, Port) ->
+		 IP ++ ":" ++ integer_to_list(Port)
+	 end.
+LogLevel = Env("RVI_LOGLEVEL", info).
+
 [
  %% All erlang apps needed to fire up a node. Do not touch.
- {apps,
-  [kernel,
-   stdlib,
-   sasl,
-   {setup, load},
-   syntax_tools,
-   lager,
-   crypto,
-   public_key,
-   exo,
-   compiler,
-   ssl,
-   asn1,
-   %% RVI-specific apps.
-
-   %% Do not touch unless you are replacing apps with your own
-   %% version.  If you are replacing an app with a non-Erlang version,
-   %% it still has to be loaded in order to resolve.
-   %% If, for example, you want to deploy your own scheduler 
-   %% outside Erlang, replace
-   %%
-   %%     schedule,
-   %% with
-   %%     { schedule, load },
-   %%
-   rvi, 
-   rvi_common,
-   service_discovery,
-   service_edge,
-   authorize,
-   schedule,
-   dlink_tcp,
-   {bt, load},
-   {dlink_bt, load},
-   proto_bert,
-   proto_json
-   ]},
+ {include_lib, "rvi_core/priv/config/rvi_common.config"},
 
  %%
  %% Custom environment settings
@@ -66,12 +50,13 @@
     [ { handlers, 
 	%% Change this to debug, info, notice, warning, or error in
 	%% order to lower the console chatter.
-	[ {lager_console_backend, debug} ]
+	[ {lager_console_backend, LogLevel} ]
       }
     ]
    },
       
    %% All RVI configuration is done here.
+   %%
    %% Please note that the rvi_node.sh launch script
    %% can still override the port range and static nodes
    %% through its command line parameters.
@@ -88,12 +73,12 @@
    %%   replaces the token.
    %%
    %%   Example: 
-   %%     { node_service_prefix, "genivi.org/vin/$rvi_file(/etc/vin,default_vin)"},
+   %%     { node_service_prefix, "genivi.org/backend/"},
    %%
    %%     will be substituted with the first line from the file
    %%     /etc/vin:
    %%
-   %%     { node_service_prefix, "genivi.org/vin/2GKEG25HXP4093669"},
+   %%     { node_service_prefix, "jlr.com/vin/2GKEG25HXP4093669"},
    %%   
    %%     If /etc/vin cannot be opened, the value default_vin 
    %%     will be used instead.
@@ -105,12 +90,12 @@
    %%   to replace the token.
    %%
    %%   Example: 
-   %%     { node_service_prefix, "genivi.org/vin/$rvi_env(VIN,default_vin)"},
+   %%     { node_service_prefix, "jlr.com/vin/$rvi_env(VIN,default_vin)"},
    %%
    %%     will be substituted with the value of the $VIN environment
    %%     variable:
    %%
-   %%     { node_service_prefix, "genivi.org/vin/2GKEG25HXP4093669"},
+   %%     { node_service_prefix, "jlr.com/vin/2GKEG25HXP4093669"},
    %%   
    %%     If VIN is not a defined environment variable, the value
    %%     default_vin will be used instead.
@@ -125,19 +110,24 @@
    %%   world wide unique.
    %%
    %%   Example: 
-   %%     { node_service_prefix, "genivi.org/vin/$uuid(default_vin)"},
+   %%     { node_service_prefix, "jlr.com/vin/$uuid(default_vin)"},
    %%
    %%     will be substituted with the value of the root disk UUID:
    %%
    %%     { node_service_prefix, 
-   %%       "genivi.org/vin/afc0a6d8-0264-4f8a-bb3e-51ff8655b51c"},
+   %%       "jlr.com/vin/afc0a6d8-0264-4f8a-bb3e-51ff8655b51c"},
    %%   
    %%     If the root UUID cannot be retrieved, the value default_vin
    %%     will be used instead.
    %% 
 
-   {rvi, 
+   {rvi_core, 
     [
+
+     {key_pair, {openssl_pem, "sota_keys/client_key_priv.pem"}},
+     {provisioning_key, "sota_keys/root_key_pub.pem"},
+     {authorize_jwt, "sota_keys/client_key_pub_sign.jwt"},
+     {cert_dir, "sota_certs"},
 
      %% Specify the node address that data_link uses to listen to
      %% incoming traffic from other rvi nodes.
@@ -153,7 +143,7 @@
      %% node_address should be set to "0.0.0.0:0" to inform
      %% the remote node that it should not attempt to
      %% connect back to self.
-     { node_address, "REPLACE_ME:8907" },   
+     { node_address, MyNodeAddr },   
 
      %% Specify the prefix of all services that this rvi node is hosting.
      %% 
@@ -164,8 +154,8 @@
      %%
      %% If a locally connected service registers itself as 
      %% "hvac/fan_speed", and the node_service_prefix is
-     %% "genivi.org/vin/1234/", this node will announce the service
-     %% "genivi.org/vin/1234/hvac/fan_speed" as being available 
+     %% "jlr.com/vin/1234/", this node will announce the service
+     %% "jlr.com/vin/1234/hvac/fan_speed" as being available 
      %% to remotely connected rvi nodes. 
      %%
      %% Two rvi nodes should never have the same node_service_prefix
@@ -175,7 +165,7 @@
      { node_service_prefix, "genivi.org/vin/VINOOLAM0FAU2DEEP/"},
 
 
-     %% Routing rules determining how to get a message targeting a specific
+     %% Routing rules determine how to get a message targeting a specific
      %% service to its destination.
      %% 
      %% Please note that if a remotely initiated (== client) data link is
@@ -195,10 +185,10 @@
 	%% The service prefix with the longest match against the service targeted
 	%% by the message will be used.
 	%%
-	%% Example: Targeted service = genivi.org/backend/sota/get_updates
+	%% Example: Targeted service = jlr.com/backend/sota/get_updates
 	%%
-	%% Prefix1: { "genivi.org/backend", [...]}
-	%% Prefix2: { "genivi.org/backend/sota", [...]}
+	%% Prefix1: { "jlr.com/backend", [...]}
+	%% Prefix2: { "jlr.com/backend/sota", [...]}
 	%%
 	%% Prefix2 will be used. 
 	%%
@@ -220,22 +210,14 @@
 	{ "genivi.org/backend/", 
 	  %% Which protocol and data link pair to use when transmitting the message
 	  %% to the targeted service. If a pair reports a failure, the next pair is tried.
-
-	  %% Use JSON-based protocol and data link. Have the data link connect
-	  %% to a given target in order to reach the node hosting
-	  %% "genivi.org/backend" prefixed services.
 	  [
-	   { proto_json_rpc, { dlink_tcp_rpc, [ { target, "REPLACE_ME:8807" } ]}}
-	  ]
-	},
-
-	{ "genivi.org/vin/VINOOLAM0FAU2DEEP/sota",
-	  [
-	   { proto_json_rpc, { dlink_tcp_rpc, [ { target, "REPLACE_ME:9000" } ]}}
+	   { proto_json_rpc, { dlink_tcp_rpc,
+			       [ { target, IPPort(BackendIP, BackendPort) } ]}}
 	  ]
 	}
        ]
      },	
+
      { components, 
        [
 	%% A note about JSON-RPC calls vs gen_server calls:
@@ -278,7 +260,7 @@
 	{service_edge, 
 	  [ 
 	    %% Service_edge_rpc component is used as a gen_server
-	    { service_edge_rpc, json_rpc,
+	    { service_edge_rpc, gen_server,
 	    [ 
 	      %% JSON-RPC address will be translated to
 	      %% an URL looking like this:
@@ -288,13 +270,13 @@
 	      %% locally connected services and for intra-component
 	      %% communication in case the access method for
 	      %% service_edge_rpc is specified as json_rpc.
-	      { json_rpc_address, { "REPLACE_ME", 8901 } },
+	      { json_rpc_address, { MyIP, MyPort+1 } },  % {"127.0.0.1",8801}
 
 	      %% Websocket is used for websocket access, preferably
 	      %% through the rvi.js package available for Javascript
 	      %% apps in browsers and crosswalk who wants to interface
 	      %% RVI.
-	      { websocket, [ { port, 8908}]}
+	      { websocket, [ { port, MyPort+8}]}  % 9008
 	    ]
 	    }
 	  ]
@@ -302,7 +284,7 @@
 	{ service_discovery, 
 	  [ { service_discovery_rpc, gen_server, 
 	      [
-	       { json_rpc_address, { "REPLACE_ME", 8802}}
+	       { json_rpc_address, { MyIP, MyPort+2 }} % {"127.0.0.1",9002}
 	      ]
 	    }
 	  ]
@@ -310,7 +292,7 @@
 	{ schedule, 
 	  [ { schedule_rpc, json_rpc, 
 	      [
-	       { json_rpc_address, { "REPLACE_ME", 8803 }}
+	       { json_rpc_address, { MyIP, MyPort+3 }}  % {"127.0.0.1",9003}
 	      ]
 	    }
 	  ]
@@ -318,7 +300,7 @@
 	{ authorize, 
 	  [ { authorize_rpc, gen_server,
 	      [ 
-		{ json_rpc_address, { "REPLACE_ME", 8804} }
+		{ json_rpc_address, { MyIP, MyPort+4 } } % {"127.0.0.1",9004}
 	      ]
 	    }
 	  ]
@@ -326,7 +308,7 @@
 	{ protocol, 
 	  [ { proto_json_rpc, gen_server,
 	      [ 
-		{ json_rpc_address, { "REPLACE_ME", 8805} }
+		{ json_rpc_address, { MyIP, MyPort+5 } } % {"127.0.0.1",9005}
 	      ]
 	    }
 	  ]
@@ -334,17 +316,14 @@
 	{ data_link, 
 	  [ { dlink_tcp_rpc, gen_server,
 	      [ 
-		{ json_rpc_address, { "REPLACE_ME", 8906} },
+		{ json_rpc_address, { MyIP, MyPort+6 } },  % 9006
 		%% Bert_rpc server specifies the port we should
 		%% listen to for incoming connections
 		%% from other rvi nodes.
 		%% A specific NIC address can also be specified
 		%% through the {ip, "192.168.0.1" } tuple.
-		{ server_opts, [ { port, 8907 }]},
-
-		%% Persistent connections are connected to at 
-		%% startup, and will be reconnected to in case they fail
-		{ persistent_connections, [ "REPLACE_ME:8807" ]}
+		{ server_opts, [ { port, MyPort+7 }]},
+		{ persistent_connections, [ IPPort(BackendIP, BackendPort) ]}
 	      ]
 	    }
 	  ]
