--- a/rvi/rvi_client.config
+++ b/rvi/rvi_client.config
@@ -290,7 +290,7 @@ LogLevel = Env("RVI_LOGLEVEL", info).
 	  ]
 	},
 	{ schedule, 
-	  [ { schedule_rpc, json_rpc, 
+	  [ { schedule_rpc, gen_server, 
 	      [
 	       { json_rpc_address, { MyIP, MyPort+3 }}  % {"127.0.0.1",9003}
 	      ]
