--- a/rvi/rvi_client.config
+++ b/rvi/rvi_client.config
@@ -124,10 +124,10 @@ LogLevel = Env("RVI_LOGLEVEL", info).
    {rvi_core, 
     [
 
-     {key_pair, {openssl_pem, "sota_keys/client_key_priv.pem"}},
-     {provisioning_key, "sota_keys/root_key_pub.pem"},
-     {authorize_jwt, "sota_keys/client_key_pub_sign.jwt"},
-     {cert_dir, "sota_certs"},
+     {key_pair, {openssl_pem, "sota_keys/client_priv.pem"}},
+     {provisioning_key, "sota_keys/root_pub.pem"},
+     {authorize_jwt, "sota_keys/client_pub_sign.jwt"},
+     {cert_dir, "sota_certs_client"},
 
      %% Specify the node address that data_link uses to listen to
      %% incoming traffic from other rvi nodes.
