--- a/rvi/rvi_server.config
+++ b/rvi/rvi_server.config
@@ -122,10 +122,10 @@ LogLevel = Env("RVI_LOGLEVEL", info).
    {rvi_core, 
     [
 
-     {key_pair, {openssl_pem, "sota_keys/backend_key_priv.pem"}},
-     {provisioning_key, "sota_keys/root_key_pub.pem"},
-     {authorize_jwt, "sota_keys/backend_key_pub_sign.jwt"},
-     {cert_dir, "sota_certs"},
+     {key_pair, {openssl_pem, "sota_keys/server_priv.pem"}},
+     {provisioning_key, "sota_keys/root_pub.pem"},
+     {authorize_jwt, "sota_keys/server_pub_sign.jwt"},
+     {cert_dir, "sota_certs_server"},
 
      %% Specify the node address that data_link uses to listen to
      %% incoming traffic from other rvi nodes.
