--- a/rvi/rvi_client.config
+++ b/rvi/rvi_client.config
@@ -162,7 +162,7 @@ LogLevel = Env("RVI_LOGLEVEL", info).
      %% value unless all services add a system-wide unique name
      %% to it.
      %% 
-     { node_service_prefix, "genivi.org/vin/VINOOLAM0FAU2DEEP/"},
+     { node_service_prefix, "genivi.org/vin/$rvi_env(CLIENT_VIN,VIN12345678901234)/"},
 
 
      %% Routing rules determine how to get a message targeting a specific
