Update RVI to 0.5.0

--- a/rvi/Dockerfile
+++ b/rvi/Dockerfile
@@ -1,29 +1,19 @@
-FROM advancedtelematic/erlang:R16B03
-ENV REFRESHED_AT 2015-09-04
+FROM debian:jessie
 
-RUN apt-get update; \
-    apt-get install -y git bluetooth libbluetooth-dev python
+RUN apt-get update && \
+    apt-get install -y libbluetooth3 bluez python-jsonrpclib wget
 
-RUN git clone https://github.com/PDXostc/rvi_core /rvi_core
+RUN echo "deb http://packages.erlang-solutions.com/debian jessie contrib" >> /etc/apt/sources.list && \
+    apt-get update && \
+    apt-get install -y --force-yes esl-erlang
 
-WORKDIR /rvi_core
+WORKDIR /opt
+RUN wget https://github.com/PDXostc/rvi_core/releases/download/v0.5.0/rvi_0.5.0-1_amd64.deb && \
+    dpkg -i rvi_0.5.0-1_amd64.deb
 
-RUN git checkout 7e826fdfbc14efd2cb0e2594591f4e2b1d3c8ff2; \
-    make; \
-    mkdir components/rvi; \
-    cp -r ebin components/rvi
+COPY backend.rvi.config /etc/rvi/
+COPY device.rvi.config /etc/rvi/
+COPY run_rvi.sh /usr/bin/run_rvi.sh
 
-ADD rvi_client.config rvi_client.config
-ADD rvi_server.config rvi_server.config
-ADD rvi_common.config priv/config/rvi_common.config
-ADD sota_certs_client sota_certs_client
-ADD sota_certs_server sota_certs_server
-ADD sota_keys sota_keys
-ADD run.sh run.sh
-RUN chmod +x run.sh
-
-EXPOSE 8801-8807
-EXPOSE 8901-8907
-
-ENTRYPOINT ["/rvi_core/run.sh"]
-CMD ["server"]
+ENTRYPOINT ["/usr/bin/run_rvi.sh"]
+CMD ["backend"]
