Update docker-engine to match teamcity version

--- a/sbt-docker/Dockerfile
+++ b/sbt-docker/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 581
 RUN echo deb https://apt.dockerproject.org/repo debian-jessie main > /etc/apt/sources.list.d/docker.list
 
 RUN apt-get update \
- && apt-get install -y docker-engine openjdk-8-jdk \
+ && apt-get install -y docker-engine=1.10.0-0~jessie openjdk-8-jdk \
  && apt-get clean
 
 WORKDIR /src
