Fix node_service_prefix in device.rvi.config

--- a/rvi/device.rvi.config
+++ b/rvi/device.rvi.config
@@ -143,7 +143,7 @@ LogLevel = Env("RVI_LOGLEVEL", notice).
      %% value unless all services add a system-wide unique name
      %% to it.
      %% 
-     { node_service_prefix, "genivi.org/vin/$rvi_env(DEVICE_ID,V1234567890123456)/"},
+     { node_service_prefix, "genivi.org/device/$rvi_env(DEVICE_ID,V1234567890123456)/"},
 
 
      %% Routing rules determine how to get a message targeting a specific
