switch swagger-cli to alpine

--- a/swagger-cli/Dockerfile
+++ b/swagger-cli/Dockerfile
@@ -1,9 +1,4 @@
-FROM debian
-
-RUN apt-get update \
- && apt-get install -y nodejs-dev npm
-
-RUN cp /usr/bin/nodejs /usr/bin/node
+FROM node:7.3-alpine
 
 RUN npm install -g swagger-cli
 
