Use JSON encoding with RVI Core port 8810

--- a/rvi/backend.rvi.config
+++ b/rvi/backend.rvi.config
@@ -319,7 +319,8 @@ LogLevel = Env("RVI_LOGLEVEL", notice).
 	    { dlink_tls_rpc, gen_server,
 	      [
 	       { json_rpc_address, { MyIP, MyPort+11} },
-	       { server_opts, [ {port, MyPort+10} ]}
+	       { server_opts, [ {port, MyPort+10} ]},
+	       { packet_mod, dlink_data_json }
 	      ]
 	    }
 	  ]
