--- a/doctools/Gemfile
+++ b/doctools/Gemfile
@@ -5,7 +5,7 @@ gem 'jekyll', '3.2.1'
 gem 'jekyll-asciidoc', '2.0.1'
 gem 'pygments.rb'
 gem 'therubyracer'
-gem 'asciidoctor-pdf', '>= 1.5.0.alpha.13'
+gem 'asciidoctor-pdf', '>= 1.5.0.alpha.14'
 gem 'octopress-debugger'
 gem 'asciidoctor-diagram'
-
+gem 'prawn-gmagick'
