--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -1,11 +1,9 @@
 source 'https://rubygems.org'
 
-gem 'asciidoctor', '1.5.5'
-gem 'jekyll', '3.2.1'
-gem 'jekyll-asciidoc', '2.0.1'
+gem 'asciidoctor', '>= 1.5.5'
+gem 'jekyll', '>= 3.2.1'
+gem 'jekyll-asciidoc', '>= 2.0.1'
 gem 'pygments.rb'
 gem 'therubyracer'
-gem 'asciidoctor-pdf', '>= 1.5.0.alpha.13'
 gem 'octopress-debugger'
-gem 'asciidoctor-diagram'
 
