--- a/doctools/Dockerfile
+++ b/doctools/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.2.6-alpine
+FROM ruby:alpine
 
 # Here we install GNU libc (aka glibc) and set C.UTF-8 locale as default.
 # This is necessary for pandoc.
@@ -38,7 +38,7 @@ ENV LANG=C.UTF-8
 
 ADD Gemfile /
 
-RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && apk update
+RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && echo http://dl-cdn.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories
 
 # We need build-base because some of the Ruby gems have native extensions. They're deleted \
 # afterwards to slim the image down.
@@ -57,14 +57,13 @@ RUN apk add tar libarchive-tools && \
   cd .. && rm -rf temp && \
   apk del tar libarchive-tools
 
-RUN apk add bash py-pillow py-pip && pip install cherrypy seqdiag actdiag nwdiag && apk del py-pip
+RUN apk add bash py-pillow py-pip python && pip install cherrypy seqdiag actdiag nwdiag && apk del py-pip
 
 ADD ats-doc-builder/pdf-themes /themes/
 ADD ats-doc-builder/docx-themes /themes/
-ADD mkdocx /bin/
-ADD mkpdf /bin/
+ADD bin/* /bin/
 
 VOLUME /site
 WORKDIR /site
-CMD ["jekyll", "b"]
+ENTRYPOINT ["doctools.py"]
 
