--- a/doctools/Gemfile
+++ b/doctools/Gemfile
@@ -1,11 +1,11 @@
 source 'https://rubygems.org'
 
-gem 'asciidoctor', '1.5.5'
-gem 'jekyll', '3.2.1'
-gem 'jekyll-asciidoc', '2.0.1'
+gem 'asciidoctor', '>= 1.5.5'
+gem 'jekyll', '>= 3.2.1'
+gem 'jekyll-asciidoc', '>= 2.0.1'
 gem 'pygments.rb'
 gem 'therubyracer'
-gem 'asciidoctor-pdf', '>= 1.5.0.alpha.14'
+gem 'asciidoctor-pdf', '>= 1.5.0.alpha.15'
 gem 'octopress-debugger'
 gem 'asciidoctor-diagram'
 gem 'prawn-gmagick'
