doctools: Move bin/ into ats-doc-builder submodule

--- a/doctools/Dockerfile
+++ b/doctools/Dockerfile
@@ -39,7 +39,7 @@ RUN apk add --no-cache cmark --repository http://nl.alpinelinux.org/alpine/edge/
 
 COPY ats-doc-builder/pdf-themes /themes/
 COPY ats-doc-builder/docx-themes /themes/
-COPY bin/* /bin/
+COPY ats-doc-builder/bin/* /bin/
 
 VOLUME /site
 WORKDIR /site
