fix ping dependency

--- a/bitbakery/Dockerfile
+++ b/bitbakery/Dockerfile
@@ -11,7 +11,7 @@ ENV CACHE_DIR="/var/cache/sstate-cache"
 # install dependencies
 
 RUN apt-get update -q && \
-    apt-get install -qy build-essential bzip2 chrpath cpio diffstat gawk gcc-multilib git-core libsdl1.2-dev locales python3 qemu socat sudo texinfo unzip wget xterm && \
+    apt-get install -qy build-essential bzip2 chrpath cpio diffstat gawk gcc-multilib git-core libsdl1.2-dev locales python3 qemu socat sudo texinfo unzip wget xterm inetutils-ping && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
