--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -1,9 +1,13 @@
 source 'https://rubygems.org'
 
 gem 'asciidoctor', '>= 1.5.5'
-gem 'jekyll', '>= 3.2.1'
+gem 'jekyll', '>= 3.4.0'
 gem 'jekyll-asciidoc', '>= 2.0.1'
+gem "algoliasearch-jekyll", '~> 0.9.0'
 gem 'pygments.rb'
 gem 'therubyracer'
 gem 'octopress-debugger'
 
+group :jekyll_plugins do
+  gem 'algoliasearch-jekyll', '~> 0.9.0'
+end
