PRO-4376 Bump submodule for doctools

--- a/doctools/Gemfile
+++ b/doctools/Gemfile
@@ -6,3 +6,4 @@ gem 'asciidoctor-pdf', '>= 1.5.0.alpha.15'
 gem 'asciidoctor-diagram'
 gem 'prawn-gmagick', '>= 0.0.9'
 gem 'asciidoctor-latex', '>= 1.5.0.17.dev'
+gem 'asciidoctor-github-include'
