--- a/repo-tool/Dockerfile
+++ b/repo-tool/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.7
 
-RUN apk add --update curl python git openssh bash && \
+RUN apk add --update curl python git openssh bash gnupg && \
     rm -rf /var/cache/apk/* && \
     curl -Lo repo https://storage.googleapis.com/git-repo-downloads/repo && \
     chmod a+x repo && \
