--- a/repo-tool/Dockerfile
+++ b/repo-tool/Dockerfile
@@ -1,7 +1,6 @@
 FROM alpine:3.7
 
-RUN apk add --update curl python git openssh bash gnupg && \
-    rm -rf /var/cache/apk/* && \
+RUN apk add --no-cache --update curl python git openssh bash gnupg && \
     curl -Lo repo https://storage.googleapis.com/git-repo-downloads/repo && \
     chmod a+x repo && \
     mv repo /usr/bin
